# zero2prod

./: Cargo.toml  LICENSE.md  configuration.yaml  deny.toml
.github/workflows/: rust.yml
scripts/: init_db.ps1  init_db.sh
src/: configuration.rs  lib.rs  main.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
